Updated with spacing fixes

--- a/src/style/modules/_ptg.scss
+++ b/src/style/modules/_ptg.scss
@@ -6,6 +6,7 @@
     display: inline-block;
     font-size: 20px;
     width: 100%;
+    margin-top: 30px;
   }
   .header-right {
     flex: 1;
